# Subs2Anki

./: App.tsx  README.en.md  README.md  README_zh.md  TODOS.md  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
components/: AppControlBar.tsx  AutoResizeEditableTextArea.tsx  CardItem.tsx  DeckColumn.tsx  EditableProjectName.tsx  KeyboardShortcutsHandler.tsx  ProcessingOverlay.tsx  ProjectControls.tsx  SubtitleColumn.tsx  TagInput.tsx  VideoPlayer.tsx  WaveformDisplay.test.tsx  WaveformDisplay.tsx
components/controls/: ActiveSubtitleLineControls.tsx  DefaultControls.tsx  TempSubtitleLineControls.tsx
components/modals/: AnkiConnectSettingsModal.tsx  CardPreviewModal.tsx  EditSubtitleLineModal.tsx  LLMSettingsModal.tsx  SettingsModal.tsx  (+2 more)
core/: anki-connect.ts  anki-db.ts  export.ts  ffmpeg.ts  furigana.ts  gemini.ts  languages.ts  media-utils.ts  model-constants.ts  parser.ts  path-shim.ts  projectRecord.ts  store.ts  time.ts  types.ts  worker.js
hooks/: useAnkiConnect.ts  useKeyboardShortcuts.tsx  useMediaProcessing.ts
locales/: en.json  zh.json
scripts/: sync-version.js
services/: anki-connect.ts  anki-db.test.ts  anki-db.ts  db.ts  export.ts  ffmpeg.ts  filename-utils.ts  furigana.ts  gemini.ts  i18n.ts  image-compression.ts  kuroshiro-browser.js  parser.ts  project-record.ts  shared-styles.ts  store.test.ts  store.ts  time.ts  types.test.ts  types.ts  undo-redo-service.ts
src-tauri/: Cargo.toml  tauri.conf.json
ui/: App.tsx  index.css
utils/: srtParser.ts  time.ts
(+39 files in other folders)
